--- a/scripts/vendas.ipynb
+++ b/scripts/vendas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 86,
    "id": "10181adc",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,16 +23,11 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sqlalchemy import create_engine, Column, String, Float, Integer, DateTime\n",
-    "from sqlalchemy.orm import declarative_base, sessionmaker\n",
-    "from sqlalchemy.orm import declarative_base\n",
     "\n",
-    "Base = declarative_base()  # ⬅️ Esta linha é obrigatória\n",
-    "\n",
-    "from datetime import datetime\n",
-    "from time import sleep\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
+    "\n",
+    "# Carregar variáveis de ambiente (.env)\n",
     "load_dotenv()\n"
    ]
   },
@@ -87,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "id": "410e6fe7",
    "metadata": {},
    "outputs": [
@@ -300,7 +295,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 88,
    "id": "1e4bb4e9",
    "metadata": {},
    "outputs": [
@@ -355,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 89,
    "id": "b6d228be",
    "metadata": {},
    "outputs": [
@@ -400,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 90,
    "id": "80f73e97",
    "metadata": {},
    "outputs": [
@@ -441,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 91,
    "id": "a3e26d20",
    "metadata": {},
    "outputs": [
@@ -461,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 92,
    "id": "c7a2d5bc",
    "metadata": {},
    "outputs": [],
@@ -475,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 93,
    "id": "820b2660",
    "metadata": {},
    "outputs": [
@@ -496,7 +491,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 94,
    "id": "008145aa",
    "metadata": {},
    "outputs": [
@@ -530,7 +525,7 @@
        "Name: Product Name, Length: 5009, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 95,
    "id": "ee50b623",
    "metadata": {},
    "outputs": [
@@ -568,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 96,
    "id": "c0b3896c",
    "metadata": {},
    "outputs": [
@@ -619,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 97,
    "id": "1794b48c",
    "metadata": {},
    "outputs": [
@@ -655,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 98,
    "id": "6a327ad7",
    "metadata": {},
    "outputs": [
@@ -713,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 99,
    "id": "3a4b9e3b",
    "metadata": {},
    "outputs": [],
@@ -733,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 100,
    "id": "5918f78a",
    "metadata": {},
    "outputs": [
@@ -874,7 +869,7 @@
        "std    32063.693350    623.245101     2.225110     0.206452   234.260108  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 101,
    "id": "e794dfa5",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 102,
    "id": "5ac0fa4c",
    "metadata": {},
    "outputs": [
@@ -1138,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 103,
    "id": "bcd31075",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 104,
    "id": "8d8340c6",
    "metadata": {},
    "outputs": [
@@ -1208,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 105,
    "id": "899b55a6",
    "metadata": {},
    "outputs": [
@@ -1231,28 +1226,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "b5899aa2",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (3823877321.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mTop 10 estados com mais vendas\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m unexpected indent\n"
-     ]
-    }
-   ],
-   "source": [
-    " Top 10 estados com mais vendas\n",
-    "df.groupby('State')['Sales'].sum().sort_values(ascending=False).head(10).plot(kind='bar', title='Top 10 Estados - Vendas')\n",
-    "plt.ylabel('Vendas')\n",
-    "plt.show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "c0ce4955",
    "metadata": {},
@@ -1262,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "3f5930e7",
    "metadata": {},
    "outputs": [
@@ -1294,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "e18fa8a4",
    "metadata": {},
    "outputs": [
@@ -1326,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "bf3d2dce",
    "metadata": {},
    "outputs": [
@@ -1373,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "id": "655d4225",
    "metadata": {},
    "outputs": [
@@ -1397,54 +1370,33 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1dcb3042",
-   "metadata": {},
-   "source": [
-    "### Classe para conectar e salvar no PostegreSQL"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "30b45a78",
+   "execution_count": 114,
+   "id": "3e3e6edf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🚀 Início do script\n",
-      "✅ Dados salvos no PostgreSQL com sucesso!\n"
+      "DataFrame salvo no PostgreSQL na tabela 'Superstore_dados_limpos' com sucesso.\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "# Criar um novo DataFrame a partir do df limpo\n",
+    "Superstore_dados_limpos = df.copy()\n",
+    "\n",
+    "# Criar a pasta 'data' caso não exista\n",
     "import os\n",
-    "from sqlalchemy import create_engine\n",
-    "from dotenv import load_dotenv\n",
+    "os.makedirs('data', exist_ok=True)\n",
     "\n",
-    "# Carregar variáveis do .env\n",
-    "load_dotenv()\n",
-    "DATABASE_URL = os.getenv(\"DATABASE_KEY\")\n",
-    "\n",
-    "# Criar engine\n",
-    "engine = create_engine(DATABASE_URL)\n",
+    "# Enviar df para PostgreSQL na tabela 'Superstore_dados_limpos'\n",
+    "df.to_sql('Superstore_dados_limpos', engine, if_exists='replace', index=False)\n",
+    "print(\"DataFrame salvo no PostgreSQL na tabela 'Superstore_dados_limpos' com sucesso.\")\n",
     "\n",
     "\n",
-    "# Função para salvar no banco\n",
-    "def salvar_dados_sqlalchemy(df):\n",
-    "    try:\n",
-    "        df.to_sql(\"vendas\", engine, index=False, if_exists=\"replace\")\n",
-    "        print(\"✅ Dados salvos no PostgreSQL com sucesso!\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"❌ Erro ao salvar no banco: {e}\")\n",
-    "\n",
-    "# Executar script\n",
-    "if __name__ == \"__main__\":\n",
-    "    print(\"🚀 Início do script\")\n",
-    "    salvar_dados_sqlalchemy(df)\n"
+    "\n"
    ]
   }
  ],
