--- a/scripts/vendas.ipynb
+++ b/scripts/vendas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 114,
    "id": "10181adc",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 115,
    "id": "410e6fe7",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 116,
    "id": "1e4bb4e9",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 117,
    "id": "b6d228be",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 118,
    "id": "80f73e97",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 119,
    "id": "a3e26d20",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 120,
    "id": "c7a2d5bc",
    "metadata": {},
    "outputs": [],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 121,
    "id": "820b2660",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 122,
    "id": "008145aa",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
        "Name: Product Name, Length: 5009, dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 123,
    "id": "ee50b623",
    "metadata": {},
    "outputs": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 124,
    "id": "c0b3896c",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 125,
    "id": "1794b48c",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 126,
    "id": "6a327ad7",
    "metadata": {},
    "outputs": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 127,
    "id": "3a4b9e3b",
    "metadata": {},
    "outputs": [],
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 128,
    "id": "5918f78a",
    "metadata": {},
    "outputs": [
@@ -869,7 +869,7 @@
        "std    32063.693350    623.245101     2.225110     0.206452   234.260108  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 129,
    "id": "e794dfa5",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 130,
    "id": "5ac0fa4c",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 131,
    "id": "bcd31075",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 132,
    "id": "8d8340c6",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 133,
    "id": "899b55a6",
    "metadata": {},
    "outputs": [
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 134,
    "id": "3f5930e7",
    "metadata": {},
    "outputs": [
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 135,
    "id": "e18fa8a4",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 136,
    "id": "bf3d2dce",
    "metadata": {},
    "outputs": [
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 137,
    "id": "655d4225",
    "metadata": {},
    "outputs": [
@@ -1371,15 +1371,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "3e3e6edf",
+   "execution_count": 138,
+   "id": "86f95a7c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DataFrame salvo no PostgreSQL na tabela 'Superstore_dados_limpos' com sucesso.\n"
+      "✅ DataFrame salvo no PostgreSQL na tabela 'Superstore_dados_limpos' com sucesso.\n"
      ]
     }
    ],
@@ -1387,16 +1387,36 @@
     "# Criar um novo DataFrame a partir do df limpo\n",
     "Superstore_dados_limpos = df.copy()\n",
     "\n",
-    "# Criar a pasta 'data' caso não exista\n",
     "import os\n",
-    "os.makedirs('data', exist_ok=True)\n",
+    "from sqlalchemy import create_engine\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "# Enviar df para PostgreSQL na tabela 'Superstore_dados_limpos'\n",
-    "df.to_sql('Superstore_dados_limpos', engine, if_exists='replace', index=False)\n",
-    "print(\"DataFrame salvo no PostgreSQL na tabela 'Superstore_dados_limpos' com sucesso.\")\n",
+    "# Carregar variáveis do arquivo .env\n",
+    "load_dotenv()\n",
     "\n",
+    "user = os.getenv('USER')\n",
+    "password = os.getenv('PASSWORD')\n",
+    "host = os.getenv('HOST')\n",
+    "port = os.getenv('PORT')\n",
+    "database = os.getenv('DATABASE')\n",
     "\n",
-    "\n"
+    "if not all([user, password, host, port, database]):\n",
+    "    raise ValueError(\"Uma ou mais variáveis de ambiente não foram carregadas corretamente.\")\n",
+    "\n",
+    "# Montar a string de conexão\n",
+    "connection_string = f'postgresql://{user}:{password}@{host}:{port}/{database}'\n",
+    "\n",
+    "# Criar o engine\n",
+    "engine = create_engine(connection_string)\n",
+    "\n",
+    "# Enviar o DataFrame para o PostgreSQL\n",
+    "Superstore_dados_limpos.to_sql(\n",
+    "    'Superstore_dados_limpos',\n",
+    "    engine,\n",
+    "    if_exists='replace',\n",
+    "    index=False\n",
+    ")\n",
+    "print(\"✅ DataFrame salvo no PostgreSQL na tabela 'Superstore_dados_limpos' com sucesso.\")\n"
    ]
   }
  ],
