--- a/scripts/vendas.ipynb
+++ b/scripts/vendas.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 199,
    "id": "10181adc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,8 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 225,
    "id": "410e6fe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# caminho para o seu arquivo .xls\n",
+    "caminho_arquivo = 'C:/Users/lagma/Desktop/projetos/Projeto_Vendas/data/US_Superstore_data.xls'\n",
+    "\n",
+    "# Carrega o arquivo Excel para um DataFrame\n",
+    "df = pd.read_excel(caminho_arquivo)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "id": "08044ba0",
    "metadata": {},
    "outputs": [
     {
@@ -295,25 +309,19 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Especifique o caminho para o seu arquivo .xls\n",
-    "caminho_arquivo = 'C:/Users/lagma/Desktop/projetos/Projeto_Vendas/data/US_Superstore_data.xls'\n",
-    "\n",
-    "# Carrega o arquivo Excel para um DataFrame\n",
-    "df = pd.read_excel(caminho_arquivo)\n",
-    "\n",
     "# Exibe as primeiras linhas para verificar se a importação foi correta\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 227,
    "id": "1e4bb4e9",
    "metadata": {},
    "outputs": [
@@ -331,16 +339,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae9fe546",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a8a23d23",
    "metadata": {},
@@ -350,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 228,
    "id": "b6d228be",
    "metadata": {},
    "outputs": [
@@ -395,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 204,
    "id": "80f73e97",
    "metadata": {},
    "outputs": [
@@ -436,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 205,
    "id": "a3e26d20",
    "metadata": {},
    "outputs": [
@@ -456,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 206,
    "id": "c7a2d5bc",
    "metadata": {},
    "outputs": [],
@@ -470,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 207,
    "id": "820b2660",
    "metadata": {},
    "outputs": [
@@ -491,7 +489,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 208,
    "id": "008145aa",
    "metadata": {},
    "outputs": [
@@ -525,7 +523,7 @@
        "Name: Product Name, Length: 5009, dtype: int64"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 209,
    "id": "ee50b623",
    "metadata": {},
    "outputs": [
@@ -563,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 210,
    "id": "c0b3896c",
    "metadata": {},
    "outputs": [
@@ -614,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 211,
    "id": "1794b48c",
    "metadata": {},
    "outputs": [
@@ -650,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 212,
    "id": "6a327ad7",
    "metadata": {},
    "outputs": [
@@ -708,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 213,
    "id": "3a4b9e3b",
    "metadata": {},
    "outputs": [],
@@ -728,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 214,
    "id": "5918f78a",
    "metadata": {},
    "outputs": [
@@ -869,7 +867,7 @@
        "std    32063.693350    623.245101     2.225110     0.206452   234.260108  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 215,
    "id": "e794dfa5",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 216,
    "id": "5ac0fa4c",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 217,
    "id": "bcd31075",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 218,
    "id": "8d8340c6",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 219,
    "id": "899b55a6",
    "metadata": {},
    "outputs": [
@@ -1235,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 220,
    "id": "3f5930e7",
    "metadata": {},
    "outputs": [
@@ -1267,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 221,
    "id": "e18fa8a4",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 222,
    "id": "bf3d2dce",
    "metadata": {},
    "outputs": [
@@ -1346,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 223,
    "id": "655d4225",
    "metadata": {},
    "outputs": [
@@ -1371,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 224,
    "id": "86f95a7c",
    "metadata": {},
    "outputs": [
